part5 fixed heading wraping

--- a/mobile.css
+++ b/mobile.css
@@ -439,6 +439,11 @@ header {
     margin: 49px 0 0 0;
     font-size: 10px;
 }
+@media (min-width: 440px) {
+    .chead{
+        width: 500px;
+    }
+}
 @media (max-width: 991px) {
     .contacts {
         display: none;
